Footer link fix. Profile alignment

--- a/assets/less/oc.less
+++ b/assets/less/oc.less
@@ -11,6 +11,10 @@ a {
   color: @oc-magenta;
 }
 
+.oc-link {
+  color: @oc-white;
+}
+
 .oc-signup-wrapper,
 .oc-login-wrapper {
   background-color: @oc-white;
